--- a/src/static/css/pages/_resume.scss
+++ b/src/static/css/pages/_resume.scss
@@ -44,7 +44,18 @@
 				padding: 0;
 					font-size: .9em;
 			}
+      ul {
+        margin: 0;
+        padding: 0;
+      }
+      p{
+        margin: 0
+      }
 		}
+    li.subpoint {
+      margin-left: 2em;
+      list-style-type: square;
+    }
 	}
 
 	.courses {
