--- a/src/static/css/layout/_sidebar.scss
+++ b/src/static/css/layout/_sidebar.scss
@@ -6,6 +6,15 @@
 
 /* Sidebar */
 
+  // When the email is copied from the button it is uppercase which I don't like
+  #sidebarEmail {
+    text-transform: none;
+  }
+  #sidebarEmailContainer {
+    display: inline;
+    margin-right: 1em;
+  }
+
 	#sidebar {
 		margin-right: _size(section-spacing);
 		min-width: 22em;
